QtWidgets/gen_qlayoutitem.h

class QLayout;
class QLayoutItem;
class QRect;
class QSize;
class QSpacerItem;
class QWidget;
typedef struct QLayout QLayout;
typedef struct QLayoutItem QLayoutItem;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QSpacerItem QSpacerItem;
typedef struct QWidget QWidget;
typedef struct QWidgetItem QWidgetItem;
typedef struct QWidgetItemV2 QWidgetItemV2;
bool QWidgetItem_override_virtual_minimumSize(void* self, intptr_t slot);
QSize* QWidgetItem_virtualbase_minimumSize(const void* self);
bool QWidgetItem_override_virtual_maximumSize(void* self, intptr_t slot);
QSize* QWidgetItem_virtualbase_maximumSize(const void* self);
bool QWidgetItem_override_virtual_expandingDirections(void* self, intptr_t slot);
int QWidgetItem_virtualbase_expandingDirections(const void* self);
bool QWidgetItem_override_virtual_isEmpty(void* self, intptr_t slot);
bool QWidgetItem_virtualbase_isEmpty(const void* self);
bool QWidgetItem_override_virtual_setGeometry(void* self, intptr_t slot);
void QWidgetItem_virtualbase_setGeometry(void* self, QRect* geometry);
bool QWidgetItem_override_virtual_geometry(void* self, intptr_t slot);
QRect* QWidgetItem_virtualbase_geometry(const void* self);
bool QWidgetItem_override_virtual_widget(void* self, intptr_t slot);
QWidget* QWidgetItem_virtualbase_widget(void* self);
bool QWidgetItem_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QWidgetItem_virtualbase_hasHeightForWidth(const void* self);
bool QWidgetItem_override_virtual_heightForWidth(void* self, intptr_t slot);
int QWidgetItem_virtualbase_heightForWidth(const void* self, int param1);
bool QWidgetItem_override_virtual_controlTypes(void* self, intptr_t slot);
int QWidgetItem_virtualbase_controlTypes(const void* self);
bool QWidgetItem_override_virtual_minimumHeightForWidth(void* self, intptr_t slot);
int QWidgetItem_virtualbase_minimumHeightForWidth(const void* self, int param1);
bool QWidgetItem_override_virtual_invalidate(void* self, intptr_t slot);
void QWidgetItem_virtualbase_invalidate(void* self);
bool QWidgetItem_override_virtual_layout(void* self, intptr_t slot);
QLayout* QWidgetItem_virtualbase_layout(void* self);
bool QWidgetItem_override_virtual_spacerItem(void* self, intptr_t slot);
QSpacerItem* QWidgetItem_virtualbase_spacerItem(void* self);
void QWidgetItem_delete(QWidgetItem* self);
QWidgetItemV2* QWidgetItemV2_new(QWidget* widget);
QSize* QWidgetItemV2_sizeHint(const QWidgetItemV2* self);
QSize* QWidgetItemV2_minimumSize(const QWidgetItemV2* self);
QSize* QWidgetItemV2_maximumSize(const QWidgetItemV2* self);
int QWidgetItemV2_heightForWidth(const QWidgetItemV2* self, int width);
bool QWidgetItemV2_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QWidgetItemV2_virtualbase_sizeHint(const void* self);
bool QWidgetItemV2_override_virtual_minimumSize(void* self, intptr_t slot);
QSize* QWidgetItemV2_virtualbase_minimumSize(const void* self);
bool QWidgetItemV2_override_virtual_maximumSize(void* self, intptr_t slot);
QSize* QWidgetItemV2_virtualbase_maximumSize(const void* self);
bool QWidgetItemV2_override_virtual_heightForWidth(void* self, intptr_t slot);
int QWidgetItemV2_virtualbase_heightForWidth(const void* self, int width);
bool QWidgetItemV2_override_virtual_expandingDirections(void* self, intptr_t slot);
int QWidgetItemV2_virtualbase_expandingDirections(const void* self);
bool QWidgetItemV2_override_virtual_isEmpty(void* self, intptr_t slot);
bool QWidgetItemV2_virtualbase_isEmpty(const void* self);
bool QWidgetItemV2_override_virtual_setGeometry(void* self, intptr_t slot);
void QWidgetItemV2_virtualbase_setGeometry(void* self, QRect* geometry);
bool QWidgetItemV2_override_virtual_geometry(void* self, intptr_t slot);
QRect* QWidgetItemV2_virtualbase_geometry(const void* self);
bool QWidgetItemV2_override_virtual_widget(void* self, intptr_t slot);
QWidget* QWidgetItemV2_virtualbase_widget(void* self);
bool QWidgetItemV2_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QWidgetItemV2_virtualbase_hasHeightForWidth(const void* self);
bool QWidgetItemV2_override_virtual_controlTypes(void* self, intptr_t slot);
int QWidgetItemV2_virtualbase_controlTypes(const void* self);
bool QWidgetItemV2_override_virtual_minimumHeightForWidth(void* self, intptr_t slot);
int QWidgetItemV2_virtualbase_minimumHeightForWidth(const void* self, int param1);
bool QWidgetItemV2_override_virtual_invalidate(void* self, intptr_t slot);
void QWidgetItemV2_virtualbase_invalidate(void* self);
bool QWidgetItemV2_override_virtual_layout(void* self, intptr_t slot);
QLayout* QWidgetItemV2_virtualbase_layout(void* self);
bool QWidgetItemV2_override_virtual_spacerItem(void* self, intptr_t slot);
QSpacerItem* QWidgetItemV2_virtualbase_spacerItem(void* self);
void QWidgetItemV2_delete(QWidgetItemV2* self);