qt6/gen_qlayoutitem.nim

proc fQWidgetItem_virtualbase_minimumSize(self: pointer, ): pointer{.importc: "QWidgetItem_virtualbase_minimumSize".}
proc fcQWidgetItem_override_virtual_minimumSize(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_minimumSize".}
proc fQWidgetItem_virtualbase_maximumSize(self: pointer, ): pointer{.importc: "QWidgetItem_virtualbase_maximumSize".}
proc fcQWidgetItem_override_virtual_maximumSize(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_maximumSize".}
proc fQWidgetItem_virtualbase_expandingDirections(self: pointer, ): cint{.importc: "QWidgetItem_virtualbase_expandingDirections".}
proc fcQWidgetItem_override_virtual_expandingDirections(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_expandingDirections".}
proc fQWidgetItem_virtualbase_isEmpty(self: pointer, ): bool{.importc: "QWidgetItem_virtualbase_isEmpty".}
proc fcQWidgetItem_override_virtual_isEmpty(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_isEmpty".}
proc fQWidgetItem_virtualbase_setGeometry(self: pointer, geometry: pointer): void{.importc: "QWidgetItem_virtualbase_setGeometry".}
proc fcQWidgetItem_override_virtual_setGeometry(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_setGeometry".}
proc fQWidgetItem_virtualbase_geometry(self: pointer, ): pointer{.importc: "QWidgetItem_virtualbase_geometry".}
proc fcQWidgetItem_override_virtual_geometry(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_geometry".}
proc fQWidgetItem_virtualbase_widget(self: pointer, ): pointer{.importc: "QWidgetItem_virtualbase_widget".}
proc fcQWidgetItem_override_virtual_widget(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_widget".}
proc fQWidgetItem_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QWidgetItem_virtualbase_hasHeightForWidth".}
proc fcQWidgetItem_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_hasHeightForWidth".}
proc fQWidgetItem_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QWidgetItem_virtualbase_heightForWidth".}
proc fcQWidgetItem_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_heightForWidth".}
proc fQWidgetItem_virtualbase_minimumHeightForWidth(self: pointer, param1: cint): cint{.importc: "QWidgetItem_virtualbase_minimumHeightForWidth".}
proc fcQWidgetItem_override_virtual_minimumHeightForWidth(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_minimumHeightForWidth".}
proc fQWidgetItem_virtualbase_controlTypes(self: pointer, ): cint{.importc: "QWidgetItem_virtualbase_controlTypes".}
proc fcQWidgetItem_override_virtual_controlTypes(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_controlTypes".}
proc fQWidgetItem_virtualbase_invalidate(self: pointer, ): void{.importc: "QWidgetItem_virtualbase_invalidate".}
proc fcQWidgetItem_override_virtual_invalidate(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_invalidate".}
proc fQWidgetItem_virtualbase_layout(self: pointer, ): pointer{.importc: "QWidgetItem_virtualbase_layout".}
proc fcQWidgetItem_override_virtual_layout(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_layout".}
proc fQWidgetItem_virtualbase_spacerItem(self: pointer, ): pointer{.importc: "QWidgetItem_virtualbase_spacerItem".}
proc fcQWidgetItem_override_virtual_spacerItem(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_spacerItem".}
proc fcQWidgetItem_delete(self: pointer) {.importc: "QWidgetItem_delete".}
proc fcQWidgetItemV2_new(widget: pointer): ptr cQWidgetItemV2 {.importc: "QWidgetItemV2_new".}
proc fcQWidgetItemV2_sizeHint(self: pointer, ): pointer {.importc: "QWidgetItemV2_sizeHint".}
proc fcQWidgetItemV2_minimumSize(self: pointer, ): pointer {.importc: "QWidgetItemV2_minimumSize".}
proc fcQWidgetItemV2_maximumSize(self: pointer, ): pointer {.importc: "QWidgetItemV2_maximumSize".}
proc fcQWidgetItemV2_heightForWidth(self: pointer, width: cint): cint {.importc: "QWidgetItemV2_heightForWidth".}
proc fQWidgetItemV2_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QWidgetItemV2_virtualbase_sizeHint".}
proc fcQWidgetItemV2_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_sizeHint".}
proc fQWidgetItemV2_virtualbase_minimumSize(self: pointer, ): pointer{.importc: "QWidgetItemV2_virtualbase_minimumSize".}
proc fcQWidgetItemV2_override_virtual_minimumSize(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_minimumSize".}
proc fQWidgetItemV2_virtualbase_maximumSize(self: pointer, ): pointer{.importc: "QWidgetItemV2_virtualbase_maximumSize".}
proc fcQWidgetItemV2_override_virtual_maximumSize(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_maximumSize".}
proc fQWidgetItemV2_virtualbase_heightForWidth(self: pointer, width: cint): cint{.importc: "QWidgetItemV2_virtualbase_heightForWidth".}
proc fcQWidgetItemV2_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_heightForWidth".}
proc fQWidgetItemV2_virtualbase_expandingDirections(self: pointer, ): cint{.importc: "QWidgetItemV2_virtualbase_expandingDirections".}
proc fcQWidgetItemV2_override_virtual_expandingDirections(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_expandingDirections".}
proc fQWidgetItemV2_virtualbase_isEmpty(self: pointer, ): bool{.importc: "QWidgetItemV2_virtualbase_isEmpty".}
proc fcQWidgetItemV2_override_virtual_isEmpty(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_isEmpty".}
proc fQWidgetItemV2_virtualbase_setGeometry(self: pointer, geometry: pointer): void{.importc: "QWidgetItemV2_virtualbase_setGeometry".}
proc fcQWidgetItemV2_override_virtual_setGeometry(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_setGeometry".}
proc fQWidgetItemV2_virtualbase_geometry(self: pointer, ): pointer{.importc: "QWidgetItemV2_virtualbase_geometry".}
proc fcQWidgetItemV2_override_virtual_geometry(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_geometry".}
proc fQWidgetItemV2_virtualbase_widget(self: pointer, ): pointer{.importc: "QWidgetItemV2_virtualbase_widget".}
proc fcQWidgetItemV2_override_virtual_widget(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_widget".}
proc fQWidgetItemV2_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QWidgetItemV2_virtualbase_hasHeightForWidth".}
proc fcQWidgetItemV2_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_hasHeightForWidth".}
proc fQWidgetItemV2_virtualbase_minimumHeightForWidth(self: pointer, param1: cint): cint{.importc: "QWidgetItemV2_virtualbase_minimumHeightForWidth".}
proc fcQWidgetItemV2_override_virtual_minimumHeightForWidth(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_minimumHeightForWidth".}
proc fQWidgetItemV2_virtualbase_controlTypes(self: pointer, ): cint{.importc: "QWidgetItemV2_virtualbase_controlTypes".}
proc fcQWidgetItemV2_override_virtual_controlTypes(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_controlTypes".}
proc fQWidgetItemV2_virtualbase_invalidate(self: pointer, ): void{.importc: "QWidgetItemV2_virtualbase_invalidate".}
proc fcQWidgetItemV2_override_virtual_invalidate(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_invalidate".}
proc fQWidgetItemV2_virtualbase_layout(self: pointer, ): pointer{.importc: "QWidgetItemV2_virtualbase_layout".}
proc fcQWidgetItemV2_override_virtual_layout(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_layout".}
proc fQWidgetItemV2_virtualbase_spacerItem(self: pointer, ): pointer{.importc: "QWidgetItemV2_virtualbase_spacerItem".}
proc fcQWidgetItemV2_override_virtual_spacerItem(self: pointer, slot: int) {.importc: "QWidgetItemV2_override_virtual_spacerItem".}
proc fcQWidgetItemV2_delete(self: pointer) {.importc: "QWidgetItemV2_delete".}


func init*(T: type QLayoutItem, h: ptr cQLayoutItem): QLayoutItem =
  T(h: h)
proc create*(T: type QLayoutItem, ): QLayoutItem =

  QLayoutItem.init(fcQLayoutItem_new())
proc create*(T: type QLayoutItem, param1: QLayoutItem): QLayoutItem =

  QLayoutItem.init(fcQLayoutItem_new2(param1.h))
proc create*(T: type QLayoutItem, alignment: gen_qnamespace.AlignmentFlag): QLayoutItem =

  QLayoutItem.init(fcQLayoutItem_new3(cint(alignment)))
proc sizeHint*(self: QLayoutItem, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQLayoutItem_sizeHint(self.h))

proc minimumSize*(self: QLayoutItem, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQLayoutItem_minimumSize(self.h))

proc maximumSize*(self: QLayoutItem, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQLayoutItem_maximumSize(self.h))

proc expandingDirections*(self: QLayoutItem, ): gen_qnamespace.Orientation =

  gen_qnamespace.Orientation(fcQLayoutItem_expandingDirections(self.h))

proc setGeometry*(self: QLayoutItem, geometry: gen_qrect.QRect): void =

  fcQLayoutItem_setGeometry(self.h, geometry.h)

proc geometry*(self: QLayoutItem, ): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQLayoutItem_geometry(self.h))

proc isEmpty*(self: QLayoutItem, ): bool =

  fcQLayoutItem_isEmpty(self.h)

proc hasHeightForWidth*(self: QLayoutItem, ): bool =

  fcQLayoutItem_hasHeightForWidth(self.h)

proc heightForWidth*(self: QLayoutItem, param1: cint): cint =

  fcQLayoutItem_heightForWidth(self.h, param1)

proc minimumHeightForWidth*(self: QLayoutItem, param1: cint): cint =

  fcQLayoutItem_minimumHeightForWidth(self.h, param1)

proc invalidate*(self: QLayoutItem, ): void =

  fcQLayoutItem_invalidate(self.h)

proc widget*(self: QLayoutItem, ): gen_qwidget.QWidget =

  gen_qwidget.QWidget(h: fcQLayoutItem_widget(self.h))

proc layout*(self: QLayoutItem, ): gen_qlayout.QLayout =

  gen_qlayout.QLayout(h: fcQLayoutItem_layout(self.h))

proc spacerItem*(self: QLayoutItem, ): QSpacerItem =

  QSpacerItem(h: fcQLayoutItem_spacerItem(self.h))

proc alignment*(self: QLayoutItem, ): gen_qnamespace.AlignmentFlag =

  gen_qnamespace.AlignmentFlag(fcQLayoutItem_alignment(self.h))

proc setAlignment*(self: QLayoutItem, a: gen_qnamespace.AlignmentFlag): void =

  fcQLayoutItem_setAlignment(self.h, cint(a))

proc controlTypes*(self: QLayoutItem, ): gen_qsizepolicy.QSizePolicyControlType =

  gen_qsizepolicy.QSizePolicyControlType(fcQLayoutItem_controlTypes(self.h))

type QLayoutItemsizeHintBase* = proc(): gen_qsize.QSize
proc onsizeHint*(self: QLayoutItem, slot: proc(): gen_qsize.QSize) =
  # TODO check subclass
  type Cb = proc(): gen_qsize.QSize
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQLayoutItem_override_virtual_sizeHint(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QLayoutItem_sizeHint(self: ptr cQLayoutItem, slot: int): pointer {.exportc: "miqt_exec_callback_QLayoutItem_sizeHint ".} =
  type Cb = proc(): gen_qsize.QSize
  var nimfunc = cast[ptr Cb](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
type QLayoutItemminimumSizeBase* = proc(): gen_qsize.QSize
proc onminimumSize*(self: QLayoutItem, slot: proc(): gen_qsize.QSize) =
  # TODO check subclass
  type Cb = proc(): gen_qsize.QSize
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQLayoutItem_override_virtual_minimumSize(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QLayoutItem_minimumSize(self: ptr cQLayoutItem, slot: int): pointer {.exportc: "miqt_exec_callback_QLayoutItem_minimumSize ".} =
  type Cb = proc(): gen_qsize.QSize
  var nimfunc = cast[ptr Cb](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
type QLayoutItemmaximumSizeBase* = proc(): gen_qsize.QSize
proc onmaximumSize*(self: QLayoutItem, slot: proc(): gen_qsize.QSize) =
  # TODO check subclass
  type Cb = proc(): gen_qsize.QSize
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQLayoutItem_override_virtual_maximumSize(self.h, cast[int](addr tmp[]))
